--- a/service.yml
+++ b/service.yml
@@ -2,7 +2,7 @@
 # https://skyline-docs.ezcater.net/configuration/service_yml
 
 name: ezhackathon
-skip_production_deploy: false
+skip_production_deploy: true
 pipeline:
   sandbox_cd_branch: main
 experimental:
