--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,10 +1,12 @@
+default: &default
+  adapter: redis
+  url: <%= Rails.configuration.x.redis_url %>
+
 development:
-  adapter: async
+  <<: *default
 
 test:
-  adapter: test
+  <<: *default
 
 production:
-  adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: ezhackathon_production
+  <<: *default
